make "ansible.sh all" work with -v option in Dockerfile

--- a/_ansible/roles/all_support/tasks/main.yml
+++ b/_ansible/roles/all_support/tasks/main.yml
@@ -14,7 +14,7 @@
   - name: Discover modules in Dockerfile
     ansible.builtin.shell: |
       set -e -o pipefail
-      cat {{ all_root }}/Dockerfile | sed -n 's/^RUN *ansible.sh \([^ ]*\).*$/\1/p'
+      cat {{ all_root }}/Dockerfile | sed -n 's/^RUN *ansible.sh *\(-v *[^ ]* *\)*\([^ ]*\).*$/\2/p'
     args:
       executable: /bin/bash
     register: modules
